# ganger

./: .gitignore  CLAUDE.md  PHASE1_COMPLETE.md  PHASE_2B_COMPLETE.md  QUICKSTART.md  README.md  ROADMAP.md  TUI_TESTING.md  error-cause.txt  pyproject.toml  test_tui.py
config/: config.yaml
docs/: keyboard-shortcuts.md  tags.md
src/ganger/: __init__.py  cli.py
src/ganger/config/: __init__.py  settings.py
src/ganger/core/: __init__.py  auth.py  cache.py  data_loader.py  exceptions.py  folder_manager.py  github_client.py  models.py
src/ganger/mcp/: __init__.py  server.py  tools.py
src/ganger/tui/: __init__.py  app.py  app.tcss  keybindings.py  messages.py
src/ganger/tui/ui/: __init__.py  command_input.py  help_overlay.py  miller_view.py  search_input.py  status_bar.py
src/ganger/tui/ui/modals/: __init__.py  folder_creation_modal.py  oauth_modal.py
src/ganger/utils/: __init__.py  rate_limiter.py
tests/: __init__.py  conftest.py  test_async_initialization.py  test_auth.py  test_cache.py  test_cache_migration_v3.py  test_data_loader_enhanced.py  test_folder_kind.py  test_folder_kind_dispatch.py  test_folder_manager.py  test_folder_position.py  test_github_client.py  test_github_client_graphql.py  test_mcp_server.py  test_models.py  test_rate_limiter.py  test_settings.py  test_stub_identity_upgrade.py  test_tui_app.py  test_tui_keys.py  test_user_tags.py  test_v3_kind_repair.py  utils.py
